package inf5153.Directions;

import java.util.List;

/**
 * Created by wflag on 2020-06-08.
 */
public interface Direction {
    List<CardinalDirection> getDirections();
}
